Added popup, added flashcard and buttons, and added permissions to manifest.json
I added a css animated flashcard, and linked that to the data stored in storage. I created a popup that allows access to the practice webpage. I also added buttons intended for spaced repetition

--- a/manifest.json
+++ b/manifest.json
@@ -2,13 +2,19 @@
     "name": "translateSave",
     "version": "1.0",
     "description": "This saves and translates words to Study.",
-    "permissions": ["contextMenus","storage","https://glosbe.com/"],
+    "permissions": ["contextMenus","storage","https://glosbe.com/","activeTab","declarativeContent", "tabs"],
     "background": {
       "scripts": ["background.js","practice.js"],
       "persistent": false
     },
     "icons": {
         "16": "images/icon.png"
+    },
+    "browser_action": {
+      "default_popup": "popup.html",
+      "default_icon": {
+        "16": "images/icon.png"
+      }
     },
     "manifest_version": 2
 
