The practice webpage now checks for added words while running. I added a check for participles when translating, and I removed practice.js as a background script

--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "description": "This saves and translates words to Study.",
     "permissions": ["contextMenus","storage","https://glosbe.com/","activeTab","declarativeContent", "tabs"],
     "background": {
-      "scripts": ["background.js","practice.js"],
+      "scripts": ["background.js"],
       "persistent": false
     },
     "icons": {
